--- a/Propuesta/css.css
+++ b/Propuesta/css.css
@@ -15,13 +15,42 @@ h1{
 
 
 .contenedor{
+    background-image: :url(https://github.com/Tralph89/coursera-test/blob/gh-pages/Propuesta/1200px-Heart_coraz%C3%B3n.svg.png?raw=true);
+    background-repeat: repeat;
+    position: relative;
+    display: inline-block;
     width: 80%;
     height: 400px;
-    text-align: right;
+    text-align: center;
     margin-top: 30%;
 }
 
-
+.corazon {
+    width: 10px;
+    height: : 15px;
+}
+.texto-encima {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.centrado {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.imagen {
+    width: 200px;
+    height: 250px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: -300px;
+    margin-left: 70%;
+    
+}
 
 .imagen img{
     width: 200px;
